infrastructure/k8s/deployment-front-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-front-prod-main
  labels:
    app   : weather-front
    owners: ValentinKozlov
    env   : prod
    state : main
spec:
  replicas: 3
  selector:
    matchLabels:
      app   : weather-front
      owners: ValentinKozlov
      env   : prod
      state : main
  template:
    metadata:
      labels:
        app   : weather-front
        owners: ValentinKozlov
        env   : prod
        state : main
    spec:
      containers:
      - name : weather-front
        image: nginx:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
