infrastructure/k8s/deployment-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-front-dev-main
  namespace: dev
  labels:
    app   : weather-front
    owners: ValentinKozlov
    env   : dev
    state : main
spec:
  selector:
    matchLabels:
      app   : weather-front
      owners: ValentinKozlov
      env   : dev
      state : main
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app   : weather-front
        owners: ValentinKozlov
        env   : dev
        state : main
    spec:
      containers:
      - name : weather-front
        image: 280720853053.dkr.ecr.eu-central-1.amazonaws.com/whatweather-front:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: front-dev-main
  namespace: dev
  labels:
    app   : front
    owners: ValentinKozlov
    env   : dev
    state : main
spec:
  type: ClusterIP
  selector:
    env: dev
    app: weather-front
  ports:
    - protocol  : TCP
      port      : 5000
      targetPort: 5000

---
  apiVersion: v1
  kind: Secret
  metadata:
    name: db-dev
    namespace: dev
  type: Opaque
  data:
    username_db: cm9vdA==
    password_db: Zmxhc2twYXNz
    database: dGVzdF9mbGFzaw==
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-back-dev-main
  namespace: dev
  labels:
    app   : weather-back
    owners: ValentinKozlov
    env   : dev
    state : main
spec:
  replicas: 2
  selector:
    matchLabels:
      app   : weather-back
      owners: ValentinKozlov
      env   : dev
      state : main
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app   : weather-back
        owners: ValentinKozlov
        env   : dev
        state : main
    spec:
      containers:
      - name : weather-back
        image: 280720853053.dkr.ecr.eu-central-1.amazonaws.com/whatweather-back:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-diploma
  namespace: dev
  labels:
    app   : back
    owners: ValentinKozlov
    env   : dev
    state : main
spec:
  type: ClusterIP
  selector:
    env: dev
    app: weather-back
  ports:
    - protocol  : TCP
      port      : 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-main
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: front-dev-main
             port: 
                number: 5000

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: front-diploma-lb
#   namespace: dev
#   labels:
#     app   : front
#     owners: ValentinKozlov
#     env   : dev
#     state : main
# spec:
#   type: LoadBalancer
#   selector:
#     env: dev
#     app: weather-front
#   ports:
#     - protocol  : TCP
#       port      : 80
#       targetPort: 5000
